[gd_scene load_steps=14 format=3 uid="uid://c3cftyawb7ueu"]

[ext_resource type="Texture2D" uid="uid://ovviteityiye" path="res://Resources/Images/Sfondo.png" id="1_a8qdv"]
[ext_resource type="Script" uid="uid://dfq8e1kryrbeb" path="res://Scripts/Battle/battagllia.gd" id="1_bgf7q"]
[ext_resource type="FontFile" uid="uid://ds5snyvlfuynj" path="res://Resources/Others/DeathFont.otf" id="3_wyd80"]
[ext_resource type="AudioStream" uid="uid://clbcsyegxlpgm" path="res://Resources/Sounds/Death.mp3" id="4_hm82a"]
[ext_resource type="Texture2D" uid="uid://ckoum6b3kyr05" path="res://Resources/Images/Icone/Stat/HP.png" id="4_vdukg"]
[ext_resource type="Texture2D" uid="uid://b3fusq6hh5gkg" path="res://Resources/Images/Icone/Stat/ATT.png" id="5_ctmbl"]
[ext_resource type="Texture2D" uid="uid://dhy0k10lbue41" path="res://Resources/Images/Icone/Stat/PI.png" id="6_g23fv"]
[ext_resource type="Texture2D" uid="uid://de7e7o17r13dr" path="res://Resources/Images/Icone/Stat/DIF.png" id="7_uu40y"]
[ext_resource type="Texture2D" uid="uid://da3b0ojk16agb" path="res://Resources/Images/Icone/Stat/INT.png" id="8_amlm3"]
[ext_resource type="Texture2D" uid="uid://cpciw6myxws6m" path="res://Resources/Images/Icone/Stat/SPEED.png" id="9_u1trn"]
[ext_resource type="AudioStream" uid="uid://byjnnd7hjs2vc" path="res://Resources/Sounds/Musics/Battle.mp3" id="11_2y4ap"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2y4ap"]
bg_color = Color(0, 0.396078, 0.286275, 0.462745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kctv"]
bg_color = Color(0, 0.695347, 0.620697, 1)

[node name="Battle" type="CanvasLayer" groups=["Battle"]]
script = ExtResource("1_bgf7q")

[node name="Background" type="TextureRect" parent="."]
offset_top = -108.0
offset_right = 1920.0
offset_bottom = 989.0
texture = ExtResource("1_a8qdv")

[node name="DeathScreen" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Black" type="ColorRect" parent="DeathScreen"]
layout_mode = 0
offset_right = 1921.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="DeathScreen"]
layout_mode = 0
offset_left = 595.0
offset_top = 188.0
offset_right = 1282.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wyd80")
theme_override_font_sizes/font_size = 300
text = "YOU DIE"

[node name="ClickArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 796.0
mouse_filter = 1

[node name="TextBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Box" type="ColorRect" parent="TextBox"]
layout_mode = 0
offset_top = 797.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Text" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 34.0
offset_top = 815.0
offset_right = 1901.0
offset_bottom = 977.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Prova"

[node name="InfoBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Box" type="ColorRect" parent="InfoBox"]
layout_mode = 0
offset_top = 999.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.489622, 0.489622, 0.489622, 1)

[node name="Name" type="Label" parent="InfoBox"]
layout_mode = 0
offset_left = 17.0
offset_top = 1009.0
offset_right = 387.0
offset_bottom = 1064.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="Stats" type="Control" parent="InfoBox"]
anchors_preset = 0
offset_left = 300.0
offset_top = 4.0
offset_right = 340.0
offset_bottom = 44.0

[node name="HP" type="TextureRect" parent="InfoBox/Stats"]
layout_mode = 0
offset_left = 414.0
offset_top = 1001.0
offset_right = 489.0
offset_bottom = 1076.0
texture = ExtResource("4_vdukg")

[node name="Label" type="Label" parent="InfoBox/Stats/HP"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="ATT" type="TextureRect" parent="InfoBox/Stats"]
layout_mode = 0
offset_left = 514.0
offset_top = 1001.0
offset_right = 589.0
offset_bottom = 1076.0
texture = ExtResource("5_ctmbl")

[node name="Label" type="Label" parent="InfoBox/Stats/ATT"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="PI" type="TextureRect" parent="InfoBox/Stats"]
layout_mode = 0
offset_left = 614.0
offset_top = 1001.0
offset_right = 689.0
offset_bottom = 1076.0
texture = ExtResource("6_g23fv")

[node name="Label" type="Label" parent="InfoBox/Stats/PI"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="DIF" type="TextureRect" parent="InfoBox/Stats"]
layout_mode = 0
offset_left = 714.0
offset_top = 1001.0
offset_right = 789.0
offset_bottom = 1076.0
texture = ExtResource("7_uu40y")

[node name="Label" type="Label" parent="InfoBox/Stats/DIF"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="INT" type="TextureRect" parent="InfoBox/Stats"]
layout_mode = 0
offset_left = 814.0
offset_top = 1001.0
offset_right = 889.0
offset_bottom = 1076.0
texture = ExtResource("8_amlm3")

[node name="Label" type="Label" parent="InfoBox/Stats/INT"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="SPEED" type="TextureRect" parent="InfoBox/Stats"]
layout_mode = 0
offset_left = 914.0
offset_top = 1001.0
offset_right = 989.0
offset_bottom = 1076.0
texture = ExtResource("9_u1trn")

[node name="Label" type="Label" parent="InfoBox/Stats/SPEED"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="InfoBox"]
layout_mode = 0
offset_left = 1337.0
offset_top = 1016.0
offset_right = 1848.0
offset_bottom = 1063.0
theme_override_styles/background = SubResource("StyleBoxFlat_2y4ap")
theme_override_styles/fill = SubResource("StyleBoxFlat_0kctv")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="InfoBox/ProgressBar"]
layout_mode = 0
offset_left = 220.0
offset_top = 3.0
offset_right = 300.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 30
text = "0/100"

[node name="Buttons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="0" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "Mossa1"

[node name="1" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Mossa2"

[node name="2" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "Mossa3"

[node name="3" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "Mossa4"

[node name="Spawn" type="Node2D" parent="."]
position = Vector2(0, 60)

[node name="0" type="Node2D" parent="Spawn"]
position = Vector2(700, 400)

[node name="1" type="Node2D" parent="Spawn"]
position = Vector2(440, 180)

[node name="2" type="Node2D" parent="Spawn"]
position = Vector2(440, 560)

[node name="3" type="Node2D" parent="Spawn"]
position = Vector2(250, 370)

[node name="EnemySpawn" type="Node2D" parent="."]
position = Vector2(1920, 60)
rotation = -3.14159
scale = Vector2(1, -1)

[node name="0" type="Node2D" parent="EnemySpawn"]
position = Vector2(700, 400)

[node name="1" type="Node2D" parent="EnemySpawn"]
position = Vector2(440, 180)

[node name="2" type="Node2D" parent="EnemySpawn"]
position = Vector2(440, 560)

[node name="3" type="Node2D" parent="EnemySpawn"]
position = Vector2(250, 370)

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hm82a")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_2y4ap")
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
